--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-<div class="w-100 text-center">App Component</div>
+<!-- <div class="w-100 text-center">App Component</div>
 <div class="container w-100 text-center mt-3">
   <h1>Welcome to SimpliBlog</h1>
   <button class="btn btn-primary">Read Blogs</button>
-</div>
+</div> -->
+
+<app-navbar></app-navbar>
 
 <router-outlet></router-outlet>
