--- a/src/app/newblog/newblog.component.html
+++ b/src/app/newblog/newblog.component.html
@@ -1,1 +1,30 @@
-<p>newblog works!</p>
+<div class="container col-8">
+  <div class="m-3 text-center" style="font-family: monospace">
+    <h1>Write a New Blog</h1>
+  </div>
+  <form class="m-3">
+    <div class="mb-3">
+      <label for="title" class="form-label">Title</label>
+      <input
+        type="text"
+        name="title"
+        placeholder="Blog Title..."
+        class="form-control"
+        [(ngModel)]="title"
+      />
+    </div>
+    <div class="mb-3">
+      <label for="content" class="form-label">Content</label>
+      <textarea
+        rows="15"
+        placeholder="Blog Content..."
+        name="content"
+        class="form-control"
+        [(ngModel)]="content"
+      ></textarea>
+    </div>
+    <button type="submit" class="btn btn-primary" (click)="addBlog()">
+      Submit
+    </button>
+  </form>
+</div>
