created home component and used json server as a backend and successfully fetched the data from the json server

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,13 @@
-<p>home works!</p>
+<div class="row">
+  <div *ngFor="let blog of blogs" class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">{{ blog.title }}</h5>
+        <p class="card-text">
+          {{ blog.content }}
+        </p>
+        <a href="#" class="btn btn-primary">Read More</a>
+      </div>
+    </div>
+  </div>
+</div>
