--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
-<div class="row">
-  <div *ngFor="let blog of blogs" class="col-sm-6">
+<div class="row p-4">
+  <div *ngFor="let blog of blogs" class="col-md-4 my-4">
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">{{ blog.title }}</h5>
