--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,9 @@
         <p class="card-text">
           {{ blog.content }}
         </p>
-        <a href="#" class="btn btn-primary">Read More</a>
+        <a routerLink="/viewBlog/{{ blog.id }}" class="btn btn-primary"
+          >Read More</a
+        >
       </div>
     </div>
   </div>
