--- a/src/app/view-blog/view-blog.component.html
+++ b/src/app/view-blog/view-blog.component.html
@@ -1,1 +1,18 @@
-<div class="container">View blog component</div>
+<div class="container-fluid">
+  <div class="card mb-3">
+    <img
+      src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpapershome.com%2Fimages%2Fwallpapers%2Fgreek-3840x2160-cooking-recipe-lettuce-tomatoes-paprika-olives-feta-4k-17422.jpg&f=1&nofb=1"
+      class="card-img-top"
+      alt="Food Blog Image"
+    />
+    <div class="card-body">
+      <h2 class="card-title">{{ blog.title }}</h2>
+      <p class="card-text">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </p>
+      <p class="card-text">
+        {{ blog.content }}
+      </p>
+    </div>
+  </div>
+</div>
