now user can add images to the blog

--- a/src/app/newblog/newblog.component.html
+++ b/src/app/newblog/newblog.component.html
@@ -4,13 +4,33 @@
   </div>
   <form class="m-3">
     <div class="mb-3">
-      <label for="title" class="form-label">Title</label>
+      <label for="title" class="form-label">Blog Title</label>
       <input
         type="text"
         name="title"
         placeholder="Blog Title..."
         class="form-control"
         [(ngModel)]="title"
+      />
+    </div>
+    <div class="mb-3">
+      <label for="author" class="form-label">Author</label>
+      <input
+        type="text"
+        name="author"
+        placeholder="Author name..."
+        class="form-control"
+        [(ngModel)]="author"
+      />
+    </div>
+    <div class="mb-3">
+      <label for="image" class="form-label">Image</label>
+      <input
+        type="file"
+        name="image"
+        accept="image/*"
+        class="form-control"
+        (change)="onImgUpload($event)"
       />
     </div>
     <div class="mb-3">
