--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,13 @@
 <div class="row p-4">
   <div *ngFor="let blog of blogs" class="col-md-4 my-4">
     <div class="card">
+      <div class="card-header">
+        <img
+          class="card-img-top"
+          src="{{ blog.image }}"
+          alt="Food Blog Image"
+        />
+      </div>
       <div class="card-body">
         <h5 class="card-title">{{ blog.title }}</h5>
         <p class="card-text">
