--- a/src/app/view-blog/view-blog.component.html
+++ b/src/app/view-blog/view-blog.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <div class="card mb-3">
+  <div class="card mb-2">
     <div class="card-header">
       <img
         src="{{ blog.image }}"
@@ -11,7 +11,11 @@
     <div class="card-body">
       <h2 class="card-title">{{ blog.title }}</h2>
       <p class="card-text">
-        <small class="text-muted">Last updated 3 mins ago</small>
+        <b>By: {{ blog.author }}</b>
+        <br />
+        <small class="text-muted"
+          ><b>Last updated {{ blog.date | date }}</b>
+        </small>
       </p>
       <p class="card-text">
         {{ blog.content }}
