--- a/src/app/view-blog/view-blog.component.html
+++ b/src/app/view-blog/view-blog.component.html
@@ -21,8 +21,10 @@
         {{ blog.content }}
       </p>
     </div>
-    <div class="card-footer">
-      <button class="btn btn-info">Update</button>
+    <div class="card-footer text-center">
+      <button class="btn btn-info" routerLink="/updateBlog/{{ blog.id }}">
+        Update
+      </button>
       <button class="btn btn-danger mx-3" (click)="deleteBlog()">Delete</button>
     </div>
   </div>
