img can also be updated now

--- a/src/app/update-blog/update-blog.component.html
+++ b/src/app/update-blog/update-blog.component.html
@@ -27,7 +27,13 @@
     </div>
     <div class="mb-3">
       <label for="image" class="form-label">Image</label>
-      <input type="file" name="image" accept="image/*" class="form-control" />
+      <input
+        type="file"
+        name="image"
+        accept="image/*"
+        class="form-control"
+        (change)="onImgUpload($event)"
+      />
     </div>
     <div class="mb-3">
       <label for="content" class="form-label">Content</label>
