created the contact page

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,41 @@
-<p>contact works!</p>
+<div class="container-fluid font-monospace">
+  <div class="card-header text-center p-4">
+    <h1>I'm Kunal Kamble .</h1>
+    <p class="tag">SDE @Simplilearn</p>
+  </div>
+  <!-- Profile  -->
+  <div class="card-body text-center">
+    <div class="card-body">
+      <h2>Get In Touch</h2>
+      <br />
+      <p>
+        If you are looking forward to acquire digital skills.<br /><br />
+        Visit
+        <a class="navbar-brand" href="https://www.simplilearn.com"
+          ><span style="color: orange">Simpli</span
+          ><span style="color: dodgerblue">learn</span></a
+        ><br />
+        <br />
+        Drop me a mail, I will help you out .
+      </p>
+      <a class="btn btn-primary" href="mailto:kamblekunal430@gmail.com"
+        >CONTACT ME</a
+      >
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <div class="card-footer text-center">
+    <br />
+    <a class="btn btn-info m-2" href="http://linkedin.com/in/kamblekunal430"
+      ><b>LinkedIn</b></a
+    >
+
+    <a class="btn btn-dark m-2" href="https://github.com/kamblekunal430"
+      ><b>Github</b></a
+    >
+    <br />
+    <br />
+    <p>© 2021 Kunal Kamble.</p>
+  </div>
+</div>
